--- a/src/auth/forgot-password/forgot-password.component.html
+++ b/src/auth/forgot-password/forgot-password.component.html
@@ -1,18 +1,18 @@
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
-    <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-lg">
-        <h2 class="text-3xl font-bold text-center text-gray-600 mb-5">Reset Password</h2>
+    <div class="w-full max-w-md px-11 py-7 bg-white rounded-lg shadow-lg">
+        <h2 class="text-3xl font-bold text-center text-gray-600 mb-5">Forgot Password</h2>
         <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
             <div class="row mb-4">
-                <span class="col-4 text-center">Password:</span>
+                <span class="col-4 ">Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="email" formControlName="email" placeholder="Enter your password" required>
                     </mat-form-field>
                 </div>
             </div>
-            <div class="flex items-center justify-center mb-4">
-                <button mat-raised-button color="primary" class="w-80" type="submit" [disabled]="forgotPasswordForm.invalid">
-                    Sign In
+            <div class="flex items-center justify-center mb-4 mt-5">
+                <button mat-raised-button color="primary" class="w-full" type="submit" [disabled]="forgotPasswordForm.invalid">
+                    Forgot Password
                 </button>
             </div>
         </form>
