--- a/src/auth/reset-password/reset-password.component.html
+++ b/src/auth/reset-password/reset-password.component.html
@@ -1,9 +1,9 @@
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
-    <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-lg">
+    <div class="w-full max-w-md p-12 bg-white rounded-lg shadow-lg">
         <h2 class="text-3xl font-bold text-center text-gray-600 mb-5">Reset Password</h2>
         <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
             <div class="row mb-4">
-                <span class="col-4 text-center">Password:</span>
+                <span class="col-4 ">Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="password" formControlName="password" placeholder="Enter your password" required>
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <span class="col-4 text-center">Confirm Password:</span>
+                <span class="col-4 ">Confirm Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm your password" required>
@@ -19,8 +19,8 @@
                 </div>
             </div>
             <div class="flex items-center justify-center mb-4">
-                <button mat-raised-button color="primary" class="w-80" type="submit" [disabled]="resetPasswordForm.invalid">
-                    Sign In
+                <button mat-raised-button color="primary" class="w-full" type="submit" [disabled]="resetPasswordForm.invalid">
+                    Reset Password
                 </button>
             </div>
         </form>
