--- a/src/auth/sign-up/sign-up.component.html
+++ b/src/auth/sign-up/sign-up.component.html
@@ -1,9 +1,9 @@
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
-    <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-lg">
-        <h2 class="text-3xl font-bold text-center text-gray-800 mb-5">Sign In</h2>
+    <div class="w-full max-w-md px-12 py-7 bg-white rounded-lg shadow-lg">
+        <h2 class="text-3xl font-bold text-center text-gray-800 mb-4">Sign Up</h2>
         <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
             <div class="row mb-4">
-                <span class="col-4 text-center">Name:</span>
+                <span class="col-4 ">Name:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput formControlName="name" placeholder="Enter your name" required>
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <span class="col-4 text-center">Email:</span>
+                <span class="col-4 ">Email:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput formControlName="email" placeholder="Enter your email" required>
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <span class="col-4 text-center">Password:</span>
+                <span class="col-4 ">Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="password" formControlName="password" placeholder="Enter your password" required>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <span class="col-4 text-center">Confirm Password:</span>
+                <span class="col-4 ">Confirm Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm your password" required>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <span class="col-4 text-center">Role:</span>
+                <span class="col-4 ">Role:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <mat-select matInput formControlName="role" placeholder="Select your role" required>
@@ -54,17 +54,14 @@
                     </mat-form-field>
                 </div>
             </div> -->
-            <div class="flex items-center justify-end mb-4 mr-11">
-                <a href="#" class="text-sm text-blue-600 hover:underline">Forgot password?</a>
-            </div>
             <div class="flex items-center justify-center mb-4">
-                <button mat-raised-button color="primary" class="w-80" type="submit" [disabled]="signUpForm.invalid">
-                    Sign In
+                <button mat-raised-button color="primary" class="w-full" type="submit" [disabled]="signUpForm.invalid">
+                    Sign Up
                 </button>
             </div>
         </form>
         <div class="mt-4 text-center">
-            <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="text-blue-600 hover:underline">Sign Up</a></p>
+            <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="text-blue-600 hover:underline">Sign In</a></p>
         </div>
     </div>
 </div>
