--- a/src/auth/sign-up/sign-up.component.html
+++ b/src/auth/sign-up/sign-up.component.html
@@ -61,7 +61,7 @@
             </div>
         </form>
         <div class="mt-4 text-center">
-            <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="text-blue-600 hover:underline">Sign In</a></p>
+            <p class="text-sm text-gray-600">Don't have an account? <a [routerLink]="['/signin']" class="text-blue-600 hover:underline">Sign In</a></p>
         </div>
     </div>
 </div>
