--- a/src/app/admin/dashboard/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="main  py-3 px-1" style="height: 100%; width: 100%; overflow-y: auto;">
-    <div class="container">
+    <div class="containerx">
         <router-outlet></router-outlet>
     </div>
     <div class="footer" style="width: 100%; height: 150px;">
