--- a/src/app/admin/profiletemplate/profiletemplate.component.html
+++ b/src/app/admin/profiletemplate/profiletemplate.component.html
@@ -1,4 +1,4 @@
-<div class="profile-card flex justify-center flex-col  relative">
+<div class="profile-card flex  justify-center flex-col  relative">
     <span class="absolute top-3 right-5 "  matTooltip="VIP">
         <i class="fa-solid fa-star" style="font-size: 1.2rem; color: rgb(231, 168, 31);"></i>
     </span>
@@ -28,14 +28,15 @@
   
     <!-- Action buttons -->
     <div class="actions">
-      <button class="button" matTooltip="Recent Watchlist">Watchlist</button>
-      <button class="button " matTooltip="Favorite Movies">Favorites</button>
+      <button class="button" matTooltip="Recent Watchlist" (click)="watchList()">Watchlist</button>
+      <button class="button " matTooltip="Favorite Movies" (click)="favoriteList()">Favorites</button>
     </div>
   
     <!-- Change Password and Update Profile buttons -->
     <div class="profile-actions flex justify-center gap-4 mt-3">
       <button class="button" matTooltip="Update Profile" (click)="openUpdateProfile()">Update Profile</button>
       <button class="button" matTooltip="Change Password" (click)="openChangePassword()">Change Password</button>
+      <button class="button" matTooltip="Change Password" (click)="SignOut()">Sign Out</button>
     </div>
   
     <!-- Social media links -->
