--- a/src/app/admin/profiletemplate/profiletemplate.component.scss
+++ b/src/app/admin/profiletemplate/profiletemplate.component.scss
@@ -1,10 +1,9 @@
 /* Profile card styles for limited width and height */
 .profile-card {
-    width: 80vw;
+    width: 100%;
     height: 60vh;
     background: linear-gradient(135deg, rgba(76, 0, 130, 0.33), rgba(148, 0, 211, 0.33));
     border-radius: 15px;
-    padding: 15px 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
     text-align: center;
     display: flex;
@@ -18,6 +17,10 @@
     height: 80px;
     border-radius: 50%;
     margin-bottom: 10px;
+  }
+
+  p,h1,h2,h3{
+    font-size: 18px !important;
   }
   
   /* Profile Name & Bio */
