--- a/src/app/admin/searchtemplate/searchtemplate.component.html
+++ b/src/app/admin/searchtemplate/searchtemplate.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" style="width: 100%; height: 100%;">
     <!-- Search Bar Container -->
     <div class="search-container flex justify-end w-full">
         <input type="text" class="search-input" placeholder="Search movies..." />
