--- a/src/auth/sign-in/sign-in.component.html
+++ b/src/auth/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <div class=" min-h-screen row" style="overflow:hidden !important; height: 100vh; width: 100vw; ">
     <div class="w-full max-w-md px-11 py-7  col-lg-6 col-sm-12  flex justify-center items-center " style="height:100vh;">
-        <div class="form shadow-md" style="width: 50%; padding: 3rem;">
+        <div class="form shadow-md shadow-[#4e0063] hover:shadow-[#b600e8]" style="width: 50%; padding: 3rem;">
 
         <h2 class="text-3xl font-bold text-center  mb-5">Sign In</h2>
         <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" >
@@ -35,8 +35,8 @@
         </form>
 
         <div class="mt-4 text-center">
-            <p class="text-sm text-gray-600">Don't have an account? <a href="#"
-                    class="text-blue-600 hover:underline">Sign Up</a></p>
+            <p class="text-sm text-gray-600">Don't have an account? <a 
+                    class="text-blue-600 hover:underline"  [routerLink]="['/signup']" >Sign Up</a></p>
         </div>
     </div>
 
