--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -1,1 +1,13 @@
-<app-favorite-list></app-favorite-list>
+<div class="main" style="height: 100%; width: 100%; overflow: hidden;">
+
+    @if(data.type == 'favorite'){
+    <div class="fav" style="height: 100%; width: 100%;">
+        <app-favorite-list></app-favorite-list>
+    </div>
+    }
+    @if(data.type == 'watchlist'){
+    <div class="watchlist" style="height: 100%; width: 100%;">
+        <app-favorite-list></app-favorite-list>
+    </div>
+    }
+</div>
