--- a/src/app/admin/profiletemplate/profiletemplate.component.html
+++ b/src/app/admin/profiletemplate/profiletemplate.component.html
@@ -34,8 +34,8 @@
   
     <!-- Change Password and Update Profile buttons -->
     <div class="profile-actions flex justify-center gap-4 mt-3">
-      <button class="button" matTooltip="Update Profile" (click)="openUpdateProfile()">Update Profile</button>
-      <button class="button" matTooltip="Change Password" (click)="openChangePassword()">Change Password</button>
+      <button class="button" matTooltip="Update Profile" (click)="updateProfile()">Update Profile</button>
+      <button class="button" matTooltip="Change Password" (click)="changePassword()">Change Password</button>
       <button class="button" matTooltip="Change Password" (click)="SignOut()">Sign Out</button>
     </div>
   
