--- a/src/auth/forgot-password/forgot-password.component.html
+++ b/src/auth/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
         <h2 class="text-3xl font-bold text-center text-gray-600 mb-5">Forgot Password</h2>
         <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
             <div class="row mb-4">
-                <span class="col-4 ">Password:</span>
+                <span class="col-4 ">Email:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="email" formControlName="email" placeholder="Enter your password" required>
