--- a/src/auth/sign-in/sign-in.component.html
+++ b/src/auth/sign-in/sign-in.component.html
@@ -41,6 +41,9 @@
     </div>
 
     </div>
+
+
+   <!-- billboard-------- -->
     <div class="w-full max-w-md px-11 py-7  col-lg-6 col-sm-12 flex justify-center items-center flex-col"  style="height:100vh;background: linear-gradient(45deg, #000000, #4e0063);" >
         <h2 class="text-[gold] mt-3" >Welcome to Our Service *</h2>
         <p  class="text-[gold]" >Explore the best offers and deals, only for you!</p>
