--- a/src/app/admin/change-password/change-password.component.html
+++ b/src/app/admin/change-password/change-password.component.html
@@ -1,5 +1,6 @@
 <div class="w-full max-w-md px-11 py-3  flex justify-center items-center " style="height:auto;;">
     <div class="form " style="width: 100%; ">
+        <p><button style="float: right;" (click)="closeDialog()"><i class="fa-solid fa-xmark" ></i></button></p>
         <h2 class="text-2xl font-bold text-center  mb-3">Change Password</h2>
         <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
             <div class="row mb-3">
@@ -14,7 +15,7 @@
                 <span class="col-4 ">New Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
-                        <input matInput type="newpassword" formControlName="password"
+                        <input matInput type="newpassword" formControlName="newpassword"
                             placeholder="Enter your newpassword" required>
                     </mat-form-field>
                 </div>
@@ -23,7 +24,7 @@
                 <span class="col-4 ">Confirm Password:</span>
                 <div class="col-8">
                     <mat-form-field appearance="outline" class="w-full">
-                        <input matInput type="confirmpassword" formControlName="password"
+                        <input matInput type="confirmpassword" formControlName="confirmpassword"
                             placeholder="Enter your confirmpassword" required>
                     </mat-form-field>
                 </div>
