--- a/src/app/admin/update-profile/update-profile.component.html
+++ b/src/app/admin/update-profile/update-profile.component.html
@@ -1,5 +1,6 @@
 <div class="w-full max-w-md px-11 py-3  flex justify-center items-center " style="height:auto;;">
     <div class="form " style="width: 100%; ">
+        <p><button style="float: right;" (click)="closeDialog()"><i class="fa-solid fa-xmark" ></i></button></p>
         <h2 class="text-2xl font-bold text-center  mb-3">Update Profile</h2>
         <form [formGroup]="updateProfileForm" (ngSubmit)="onSubmit()">
             <div class="row mb-3">
