--- a/src/app/admin/hometemplate/hometemplate.component.html
+++ b/src/app/admin/hometemplate/hometemplate.component.html
@@ -26,6 +26,6 @@
 
 
     <div class="movie-list mt-3 w-full ">
-        <app-movielist-container></app-movielist-container>
+        <app-movielist-container [isMovieLoaded]="isMovieLoaded"></app-movielist-container>
     </div>
 </div>
