--- a/src/app/admin/latest-movies/latest-movies.component.html
+++ b/src/app/admin/latest-movies/latest-movies.component.html
@@ -5,7 +5,7 @@
     <div class="latest" #latest>
       <!-- Add content (e.g., movie posters or any other content) here -->
       @for( item of moviesx ;let first=$first;track $index ){
-        <div class="moviex-card item">
+        <div class="moviex-card item" style="cursor: pointer;" (click)="openWatchMovieDialog()">
             <div class="flex flex-col">
             <img [src]="item.image" alt="Movie Title" class="imgx">
             <div class="moviex-info">
