--- a/src/app/admin/update-profile/update-profile.component.html
+++ b/src/app/admin/update-profile/update-profile.component.html
@@ -1,4 +1,10 @@
-<div class="w-full max-w-md px-11 py-3  flex justify-center items-center " style="height:auto;;">
+<div class="w-full max-w-md px-11 py-3  flex justify-center items-center " style="height:auto; position: relative;">
+    
+    @if (isUpdatingProfile) {
+    <div class="loader" style="width: 100%; height: 100%; z-index: 10; position: absolute; top: 0px;">
+        <app-loader></app-loader>
+    </div>
+    }
     <div class="form " style="width: 100%; ">
         <p><button style="float: right;" (click)="closeDialog()"><i class="fa-solid fa-xmark" ></i></button></p>
         <h2 class="text-2xl font-bold text-center  mb-3">Update Profile</h2>
