--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -10,5 +10,5 @@
             <div class="wave"></div>
         </div>
     </div>
-    <p class="" style="margin-top: 30px; font-size: 20px; font-weight: bold;">Loading...</p>
+    <!-- <p class="" style="margin-top: 30px; font-size: 20px; font-weight: bold;">Loading...</p> -->
 </div>
