--- a/src/app/movielist-container/movielist-container.component.html
+++ b/src/app/movielist-container/movielist-container.component.html
@@ -1,17 +1,15 @@
 <div class="main">
 
-    <!-- <div class="movie-card">
-        <img src="https://assets.gadgets360cdn.com/pricee/assets/product/202205/RaOne-poster_1652193241.jpg" alt="Movie Title">
-        <div class="movie-info">
-            <h2 class="movie-title text-center ">Another Movie</h2>
-        </div>
-        <div class="overlay flex justify-end items-center flex-col">
-            <p class="text-center">Watch Now</p>
-            <p class="movie-description text-center">An exciting plot with amazing characters. Don't miss it!</p>
-        </div>
-    </div> -->
-    
+    @if (!isMovieLoaded) {
 
+    @for( item of skeletonMovie ;let first=$first;track $index ){
+    <div class="skeleton">
+        <app-skeletoncard1></app-skeletoncard1>
+    </div>
+    }
+    }
+
+    @else {
     @for( item of movies ;let first=$first;track $index ){
     <div class="movie-card">
         <img [src]="item.image" alt="Movie Title">
@@ -19,10 +17,13 @@
             <h2 class="movie-title text-center ">{{item.title}}</h2>
         </div>
         <div class="overlay flex justify-end items-center flex-col">
-            <p class="text-center">Watch Now</p>
+            <button mat-button (click)="openWatchMovieDialog()">
+                <p class="text-center">Watch Now</p>
+            </button>
             <p class="movie-description text-center">{{item.description}}</p>
         </div>
     </div>
-}
+    }
+    }
 
 </div>
