--- a/src/auth/sign-in/sign-in.component.html
+++ b/src/auth/sign-in/sign-in.component.html
@@ -1,3 +1,12 @@
+@if (isSigninLoading) {
+  <div class="loader" style="height: 100%; width: 100%; position: absolute; top: 0px; z-index: 10; background-color:rgb(0 0 0 / 70%) ;display: flex; justify-content: center; align-items: center;">
+    <div style="height: 150px; width: 150px;     background-color: #fb00ff14;
+    border-radius: 30px; padding-bottom: 20px;" >
+      <app-loading></app-loading>
+    </div>
+  </div>
+}
+  
 <div class=" min-h-screen row" style="overflow:hidden !important; height: 100vh; width: 100vw; ">
     <div class="w-full max-w-md px-11 py-7  col-lg-6 col-sm-12  flex justify-center items-center " style="height:100vh;">
         <div class="form shadow-md shadow-[#4e0063] hover:shadow-[#b600e8]" style="width: 50%; padding: 3rem;">
