--- a/src/app/admin/dashboard/sidenav/sidenav.component.html
+++ b/src/app/admin/dashboard/sidenav/sidenav.component.html
@@ -47,6 +47,18 @@
                     <i class="fa-solid fa-list"></i>
                 </button>
             </div>
+            @if (currentUser.role == 'admin') {
+            <div class="action flex  justify-center items-center" style="height: 50px; width: 50px;">
+                <button [routerLink]="['/dashboard/overview/users']" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="fa-solid fa-users"></i>
+                </button>
+            </div>
+            <div class="action flex  justify-center items-center" style="height: 50px; width: 50px;">
+                <button [routerLink]="['/dashboard/overview/entry']" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+                    <i class="fa-brands fa-slack"></i>
+                </button>
+            </div>
+        }
         </div>
 
     </div>
