--- a/src/app/admin/profiletemplate/profiletemplate.component.html
+++ b/src/app/admin/profiletemplate/profiletemplate.component.html
@@ -5,15 +5,15 @@
 
     <!-- Avatar and user details -->
      <div class="prof w-full flex justify-center">
-    <img src="https://media.istockphoto.com/id/1437816897/photo/business-woman-manager-or-human-resources-portrait-for-career-success-company-we-are-hiring.jpg?s=612x612&w=0&k=20&c=tyLvtzutRh22j9GqSGI33Z4HpIwv9vL_MZw_xOE19NQ=" alt="Avatar" class="avatar">
+    <img [src]="currentUser?.photo" alt="Avatar" class="avatar">
 </div>
-    <h2 class="profile-name">John Doe</h2>
+    <h2 class="profile-name">{{currentUser.name}}</h2>
     <p class="bio">Movie enthusiast | Loves Sci-Fi & Thrillers</p>
   
     <!-- User info section -->
     <div class="user-info">
-      <p><strong>Email:</strong> johndoe&#64;example.com</p>
-      <p><strong>Location:</strong> Los Angeles, CA</p>
+      <p><strong>Email:</strong>{{currentUser.email}}</p>
+      <p><strong>Location:</strong> Patna, CA</p>
     </div>
   
     <!-- Statistics section -->
