--- a/src/app/watchmovie-dialog/watchmovie-dialog.component.html
+++ b/src/app/watchmovie-dialog/watchmovie-dialog.component.html
@@ -7,22 +7,22 @@
         border-radius: 50%;
         display: flex;
         justify-content: center;
-        align-items: center;" (click)="closeDialog()"><i class="fa-solid fa-xmark" ></i></button></p>
+        align-items: center;" (click)="closeDialog()"><i class="fa-solid fa-xmark"></i></button></p>
 
     <div class="screeen" style="height: calc(100% - 80px); width: 100%;">
-        <iframe style="width: 100%; height: 100%;"
-    src="https://www.youtube.com/embed/jzYxbnHHhY4" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen>
-</iframe>
-
+        <iframe style="width: 100%; height: 100%;" [src]="sanitizedUrl" title="YouTube video player" frameborder="0"
+            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
     </div>
-    <div class="control-desciption fav flex justify-center items-center flex-row" style="height: 80px; width: 100%;" >
-        <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, quo.</div>
+
+
+    <div class="control-desciption fav flex justify-center items-center flex-row" style="height: 80px; width: 100%;">
+        <div class="description"><span>{{data.description}}</span></div>
         <div class="fav flex justify-center items-center" style="width: 40px; height: 40px;">
             <button (click)="favoriteButton()" matTooltip="Favorite">
-                <i class="fa-solid fa-heart" style="font-size: 25px; " [ngStyle]="{'color': isFavorite ? 'rgb(232, 81, 81)' : 'rgb(216, 216, 216)'}"></i>
+                <i class="fa-solid fa-heart" style="font-size: 25px; "
+                    [ngStyle]="{'color': isFavorite ? 'rgb(232, 81, 81)' : 'rgb(216, 216, 216)'}"></i>
             </button>
         </div>
     </div>
