--- a/src/app/admin/all-users/all-users.component.html
+++ b/src/app/admin/all-users/all-users.component.html
@@ -1,5 +1,5 @@
 @if (isUserloading) {
-  <div class="loader" style="height: 100%; width: 100%; position: absolute; top: 0px; z-index: 10; background-color:rgb(0 0 0 / 70%) ;display: flex; justify-content: center; align-items: center;">
+  <div class="loader" style="height: 100%; width: calc( 100vw - 105px);position: absolute; top: 0px; z-index: 10; background-color:rgb(0 0 0 / 70%) ;display: flex; justify-content: center; align-items: center;">
     <div style="height: 150px; width: 150px;     background-color: #fb00ff14;
     border-radius: 30px; padding-bottom: 20px;" >
       <app-loading></app-loading>
