--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,7 +96,7 @@ mat-form-field{
   .activity-dialog{
     margin: 0px !important;
     padding: 15px !important;
-    min-width: 28c0px !important;
+    min-width: 270px !important;
   }
 
 
