--- a/src/app/admin/change-password/change-password.component.html
+++ b/src/app/admin/change-password/change-password.component.html
@@ -4,16 +4,16 @@
         <h2 class="text-2xl font-bold text-center  mb-3">Change Password</h2>
         <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
             <div class="row mb-3">
-                <span class="col-4 ">Old Password:</span>
-                <div class="col-8">
+                <span class="col-12 col-sm-4 ">Old Password:</span>
+                <div class="col-12 col-sm-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput formControlName="oldpassword" placeholder="Enter your oldpassword" required>
                     </mat-form-field>
                 </div>
             </div>
             <div class=" row mb-3">
-                <span class="col-4 ">New Password:</span>
-                <div class="col-8">
+                <span class="col-12 col-sm-4 ">New Password:</span>
+                <div class="col-12 col-sm-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="newpassword" formControlName="newpassword"
                             placeholder="Enter your newpassword" required>
@@ -21,8 +21,8 @@
                 </div>
             </div>
             <div class=" row mb-3">
-                <span class="col-4 ">Confirm Password:</span>
-                <div class="col-8">
+                <span class="col-12 col-sm-4 ">Confirm Password:</span>
+                <div class="col-12 col-sm-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput type="confirmpassword" formControlName="confirmpassword"
                             placeholder="Enter your confirmpassword" required>
