--- a/src/app/admin/update-profile/update-profile.component.html
+++ b/src/app/admin/update-profile/update-profile.component.html
@@ -10,16 +10,16 @@
         <h2 class="text-2xl font-bold text-center  mb-3">Update Profile</h2>
         <form [formGroup]="updateProfileForm" (ngSubmit)="onSubmit()">
             <div class="row mb-3">
-                <span class="col-4 ">Name:</span>
-                <div class="col-8">
+                <span class="col-12 col-sm-4 ">Name:</span>
+                <div class="col-12 col-sm-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput formControlName="name" placeholder="Enter your name" required>
                     </mat-form-field>
                 </div>
             </div>
             <div class="row mb-3">
-                <span class="col-4 ">Email:</span>
-                <div class="col-8">
+                <span class="col-12 col-sm-4 ">Email:</span>
+                <div class="col-12 col-sm-8">
                     <mat-form-field appearance="outline" class="w-full">
                         <input matInput formControlName="email" placeholder="Enter your email" required>
                     </mat-form-field>
