--- a/src/app/admin/all-users/all-users.component.html
+++ b/src/app/admin/all-users/all-users.component.html
@@ -14,7 +14,7 @@
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element ; let i = index"> {{i + 1}} </td>
+      <td mat-cell *matCellDef="let element ; let i = index"  > {{i + 1}} </td>
     </ng-container>
   
     <!-- Name Column -->
@@ -46,7 +46,7 @@
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onTableClick(row)"></tr>
   </table>
   
 }
