--- a/src/app/admin/user-detail-dialog/user-detail-dialog.component.html
+++ b/src/app/admin/user-detail-dialog/user-detail-dialog.component.html
@@ -1,3 +1,9 @@
+@if (isUserUpdating) {
+    <div class="loader" style="height: 100%; width: 100%; position: absolute; top: 0px; z-index: 10; background-color: rgba(39, 0, 48, 0.634)">
+        <app-loading></app-loading>
+      </div>
+  }
+
 <div class="w-full  px-3 py-2 relative" style="height: 100%; width: 100%;">
     <p><button style=" position: absolute; top: 10px;right: 10px;" (click)="closeDialog()"><i
                 class="fa-solid fa-xmark"></i></button></p>
@@ -54,9 +60,46 @@
             <p class="my-3">Aceess Module</p>
             <div class=" mb-3 col-12 col-lg-6">
                 <div class="row">
+                    <span class="col-12 col-sm-8 ">Profile Module:</span>
+                    <div class="col-12 col-sm-4">
+                        <mat-slide-toggle class="example-margin" formControlName="profileModule" [disabled]="true">
+                        </mat-slide-toggle>
+                    </div>
+                </div>
+            </div>
+            <div class=" mb-3 col-12 col-lg-6">
+                <div class="row">
+                    <span class="col-12 col-sm-8 ">Search Module:</span>
+                    <div class="col-12 col-sm-4">
+                        <mat-slide-toggle class="example-margin" formControlName="searchModule">
+                        </mat-slide-toggle>
+                    </div>
+                </div>
+            </div>
+            <div class=" mb-3 col-12 col-lg-6">
+                <div class="row">
+                    <span class="col-12 col-sm-8 ">Home Module:</span>
+                    <div class="col-12 col-sm-4">
+                        <mat-slide-toggle class="example-margin" formControlName="homeModule" [disabled]="true">
+                        </mat-slide-toggle>
+                    </div>
+                </div>
+            </div>
+            <div class=" mb-3 col-12 col-lg-6">
+                <div class="row">
+                    <span class="col-12 col-sm-8 ">TV Module:</span>
+                    <div class="col-12 col-sm-4">
+                        <mat-slide-toggle class="example-margin" formControlName="tvModule">
+                        </mat-slide-toggle>
+                    </div>
+                </div>
+            </div>
+            
+            <div class=" mb-3 col-12 col-lg-6">
+                <div class="row">
                     <span class="col-12 col-sm-8 ">User List Module:</span>
                     <div class="col-12 col-sm-4">
-                        <mat-slide-toggle class="example-margin" formControlName="usersModule">
+                        <mat-slide-toggle class="example-margin" formControlName="usersModule" [disabled]="userDetailForm.get('role')?.value != 'admin'" >
                         </mat-slide-toggle>
                     </div>
                 </div>
@@ -65,7 +108,7 @@
                 <div class="row">
                     <span class="col-12 col-sm-8 ">Entry Module:</span>
                     <div class="col-12 col-sm-4">
-                        <mat-slide-toggle class="example-margin" formControlName="entryModule">
+                        <mat-slide-toggle class="example-margin" formControlName="entryModule" [disabled]="userDetailForm.get('role')?.value != 'admin'">
                         </mat-slide-toggle>
                     </div>
                 </div>
@@ -95,7 +138,7 @@
 </div>
 
     <div class="col-12 flex items-center justify-end mb-3 mt-3">
-        <button mat-raised-button color="primary" class="w-30" type="submit"
+        <button mat-raised-button color="primary" class="w-30" type="submit" (click)="onSubmit()"
             [disabled]="userDetailForm.invalid">
             Update User
         </button>
